# Email-assistance-agent

./: .env.example  .gitignore  README.md
Fronted/: app.js  index.html  styles.css
backend/: main.py  requirements.txt
backend/api/: config.py  tasks.py
backend/services/: agent_runner.py  config_store.py
backend/storage/: task_store.py
backend/tests/: test_config_store.py  test_tasks_api.py
email_draft_agent/: draft_email.py  pyproject.toml
email_draft_agent/src/email_draft_agent/: __init__.py  cli.py  config.py  draft_output.py  email_draft.py  email_lookup.py  email_sender.py  filename_utils.py  logging_utils.py
email_draft_agent/tests/: test_cli.py  test_config.py  test_draft_output.py  test_email_draft.py  test_email_lookup.py  test_email_sender.py  test_env_example.py
email_summary_agent/: get_email_data.py  pyproject.toml
email_summary_agent/src/email_summary_agent/: __init__.py  category_json_dump.py  cli.py  config.py  email_classification.py  email_fetcher.py  email_summary.py  json_storage.py  logging_utils.py
email_summary_agent/tests/: test_category_json_dump.py  test_cli.py  test_config.py  test_email_classification.py  test_email_fetcher.py  test_email_summary.py  test_env_example.py  test_json_storage.py  test_logging_utils.py
