[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "email-summary-agent"
version = "0.1.0"
description = "Fetch IMAP emails, classify them with configurable LLM providers, and store per-email JSON output."
requires-python = ">=3.10"
dependencies = [
    "langchain-core==1.4.7",
    "langchain-deepseek==1.1.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-google-genai>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
email-summary-agent = "email_summary_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
